--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-packages",
   "version": "0.1.0",
   "private": true,
-  "proxy" : "http://localhost:5000",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +10,7 @@
     "aos": "^2.3.4",
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
+    "docker": "^1.0.0",
     "dotenv": "^16.0.3",
     "jquery": "^3.6.4",
     "react": "^18.2.0",
